add js code to event lecture demos

--- a/lecture-notes/week-4/d3-event-handling/common-events-demo/index.css
+++ b/lecture-notes/week-4/d3-event-handling/common-events-demo/index.css
@@ -78,6 +78,7 @@ body > * {
 	width:200px;
 	border: 2px solid black;
 	margin-left: 50px;
+	
 }
 
 button {
@@ -102,6 +103,7 @@ button:hover {
 	height: 300px;
 	width: 400px;
 	margin-bottom:20px;
+	border: 2px solid black;
 }
 
 
